tests/fail/96-fail-derive-on-union.stderr
error: df-derive cannot be derived on unions; derive `ToDataFrame` on a struct
 --> tests/fail/96-fail-derive-on-union.rs:6:1
  |
6 | union Bits {
  | ^^^^^
